# tauri-example

./: .gitignore  README.md  TODO.md  package.json
assets/: README.md  index.html  index.tauri.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/opentok/: README.md  wrapper-linux-x86_64.h
src-tauri/src/: build.rs
tauri/: tauri.conf.json
tauri/src/: build.rs  main.rs
webapp/: .gitignore  package-lock.json  package.json
webapp/src/: index.tsx
webapp/src/app/: root-saga.ts  store.ts
webapp/src/features/counter/: Counter.tsx  saga.ts  slice.ts  styles.ts
